[gd_scene load_steps=5 format=3 uid="uid://cdl41quwix7ht"]

[ext_resource type="Script" path="res://menus/credits_menu.gd" id="1_vuaj6"]
[ext_resource type="Texture2D" uid="uid://duj5646i4t47r" path="res://assets/background/bg_color_citylvl.png" id="2_bke6g"]
[ext_resource type="Texture2D" uid="uid://dac7woweagocl" path="res://assets/background/buildings.png" id="3_rwf0s"]
[ext_resource type="AudioStream" uid="uid://dh3o6v354r1wv" path="res://assets/sound/Music/2016_ Clement Panchout_ Life is full of Joy.wav" id="4_gc1h7"]

[node name="CreditsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vuaj6")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -384.0
offset_top = -1352.5
offset_right = 384.0
offset_bottom = 1352.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bke6g")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -73.0
offset_right = 5.0
offset_bottom = 1290.8
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_rwf0s")
expand_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -30

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Score: 1000000000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Explanation" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1000, 300)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 44
text = "Programming:
Duarte Fonseca
Sara Marques

Art:
Timmy"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="BackToMenu" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Back To Menu
"

[node name="PlayAgain" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Play Again
"

[node name="ExitGame" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Exit Game
"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_gc1h7")
volume_db = -20.0
autoplay = true
bus = &"Music"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/BackToMenu" to="." method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ExitGame" to="." method="_on_exit_game_pressed"]
